Bug #1967479 unisoc_platform: mm: add vendor_hook for memory related on k515
[root cause  ]:vendor hook for mm
[changes     ]:mm
1. anon/swap & ~__GFP_CMA
2. use_cma_first_check = false
3. should_alloc_pages_retry
   3.1 alloc_flags & ~ALLOC_KSWAPD
   3.2 alloc_flags & ALLOC_CMA
[side effects]:no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:qogirn6l
[test case]:power on/off
[reviewers]:yuming.han
[change_type ] feature
[tag_product ] specific

This commit implement vendor hook functions for memory subsys

Change-Id: I9253df97b75f2f7f1b8a57feaa747d56acb0e439
Signed-off-by: Zhaoyang Huang <zhaoyang.huang@unisoc.com>

--- a/drivers/unisoc_platform/mm/Kconfig
+++ b/drivers/unisoc_platform/mm/Kconfig
@@ -6,5 +6,6 @@ menu "Unisoc Memory Management Vendor Hook"
 
 source "drivers/unisoc_platform/mm/emem/Kconfig"
 source "drivers/unisoc_platform/mm/reclaim/Kconfig"
+source "drivers/unisoc_platform/mm/cma/Kconfig"
 
 endmenu
