--- a/drivers/unisoc_platform/mm/Makefile
+++ b/drivers/unisoc_platform/mm/Makefile
@@ -2,3 +2,4 @@
 
 obj-$(CONFIG_UNISOC_MM_ENHANCE_MEMINFO) += emem/
 obj-$(CONFIG_UNISOC_MM_RECLAIM) += reclaim/
+obj-$(CONFIG_UNISOC_CMA_FEATURES) += cma/
