Bug #2404343 arm64: dts: change gsp-core kernel process to real-time
[root cause  ]:change gsp-core kernel process to real-time
[changes     ]:gsp driver
[side effects]:na
[self test   ]:build pass
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:ums9620,ums9621,ums512,ums9230
[test case]:build pass
[reviewers]:kevin.tang

commit_template_version:v1
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

Change gsp-core kernel process to real-time.

Signed-off-by: Xuying Liu <xuying.liu@unisoc.com>

Change-Id: I5d187be0533b6f1a88452b0c5d601e87bcae1cf9

--- a/arch/arm64/boot/dts/sprd/ums9230/ums9230.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums9230/ums9230.dtsi
@@ -691,6 +691,7 @@
 				reg = <0 0x31001000 0 0x2000>;
 				core-id = <0>;
 				kcfg-num = <16>;
+				real-time = <1>;
 				interrupts = <GIC_SPI 26 IRQ_TYPE_LEVEL_HIGH>;
 				iommus = <&iommu_dispc>;
 			};
