--- a/arch/arm64/boot/dts/sprd/ums9620/dispc.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums9620/dispc.dtsi
@@ -55,6 +55,7 @@
 		reg = <0 0x31100000 0 0x2000>;
 		core-id = <0>;
 		kcfg-num = <16>;
+		real-time = <1>;
 		interrupts = <GIC_SPI 151 IRQ_TYPE_LEVEL_HIGH>;
 		iommus = <&iommu_gsp>;
 
@@ -87,6 +88,7 @@
 		reg = <0 0x31200000 0 0x2000>;
 		core-id = <0>;
 		kcfg-num = <16>;
+		real-time = <1>;
 		interrupts = <GIC_SPI 150 IRQ_TYPE_LEVEL_HIGH>;
 		iommus = <&iommu_gsp1>;
 
