--- a/arch/arm64/boot/dts/sprd/ums512/dispc.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums512/dispc.dtsi
@@ -53,6 +53,7 @@
 			reg = <0 0x20301000 0 0x1000>;
 			core-id = <0>;
 			kcfg-num = <16>;
+			real-time = <1>;
 			interrupts = <GIC_SPI 26 IRQ_TYPE_LEVEL_HIGH>;
 			iommus = <&iommu_dispc>;
 
