Bug #2275704 arm64: dts: n6p/n6l change modem auto shutdown.SKIP ME ALWAYS
[root cause  ]: add autor shutdown
[changes     ]:dtsi
[side effects]:no
[self test   ]:pass
[download normally]:pass
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:no
[confirm dependent commit]:no
[board]:ums9620
[test case]:pass
[reviewers]:bo.jiang

commit_template_version:v1

Change-Id: I65a211d32c15a3b7ddea2f7bebc2f60bb653c3a7
Signed-off-by: Zhuo Wang1 <zhuo.wang1@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums9621/modem.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums9621/modem.dtsi
@@ -49,8 +49,11 @@
 		syscon2	= <&aon_apb_regs 0x0174 0x3000>;
 		syscon3 = <&aon_apb_regs 0xff 0x0>;
 		syscon4	= <&aon_apb_regs 0xff 0x0>;
-		syscon-names = "shutdown", "deepsleep", "corereset",
-					"sysreset", "getstatus";
+		syscon5 = <&pmu_apb_regs 0xff 0x0>;
+		syscon6	= <&pmu_apb_regs 0xff 0x0>;
+		syscon7	= <&pmu_apb_regs 0x0330 0x1000000>;
+		syscon-names = "shutdown", "deepsleep", "corereset", "sysreset",
+					"dspreset", "getstatus", "fshutdown", "autoshutdown";
 		sprd,version = <0x04>;
 	};
 
