--- a/arch/arm64/boot/dts/sprd/ums9230-6h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9230-6h10-overlay.dts
@@ -532,6 +532,11 @@
 		label = "carveout_fd";
 		memory-region = <&fd_reserved>;
 	};
+
+	oemcrypto-reserved {
+		label = "uncached_carveout_oem";
+		memory-region = <&oemcrypto_reserved>;
+	};
 };
 
 &adi_bus {
