Bug #2404786 arm: dts: add default hs delay value for sharkle
[root cause  ]: default hs delay value for sharkle is not config.
[changes     ]: add default hs delay value
[side effects]: no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:sp9832e_1h10_go
[test case]:build ok
[reviewers]:yuelin.tang zhenxiong.lai
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

add default hs delay value for sharkle.

Change-Id: Id1fa4b7ac3ea862e5d625e1a0631363e6557eaa3
Signed-off-by: Wei Zheng <wei.zheng@unisoc.com>

--- a/arch/arm/boot/dts/sp9832e-go-mach.dtsi
+++ b/arch/arm/boot/dts/sp9832e-go-mach.dtsi
@@ -311,6 +311,7 @@
 &sdio0 {
 	sprd,phy-delay-sd-uhs-sdr104 = <0x7f 0x94 0xa7 0xa7>;
 	sprd,phy-delay-sd-uhs-sdr50 = <0x7f 0x4a 0x4a 0x4a>;
+	sprd,phy-delay-sd-highspeed = <0x7f 0xb0 0xb1 0xb1>;
 	vmmc-supply = <&vddsdcore>;
 	vqmmc-supply = <&vddsdio>;
 	voltage-ranges = <3000 3000>;
