Bug #2356418 WORKAROUND: unisoc_platform: send ipi when cpu polling for long
[root cause  ]: cpu may hang when boot
[changes     ]: send ipi to all cpu when timeout
[side effects]: no
[self test   ]: yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:yes
[board]:sharkl3
[test case]:boot
[reviewers]:ke.wang
commit_template_version:v1

Change-Id: Iaeef70394820a54f5701e95a5eaabd99ca51448a
Signed-off-by: Xuewen Yan <xuewen.yan@unisoc.com>

--- a/drivers/unisoc_platform/sched/Kconfig
+++ b/drivers/unisoc_platform/sched/Kconfig
@@ -148,4 +148,14 @@ config UNISOC_CPU_NETLINK
 	  the message.
 	  If you do not use unisoc android framework, or you do not want to receive
 	  the messege, turn off it.
+
+config UNISOC_WORKAROUND_L3_HANG
+	bool "workaround sharkl3 32b cpu hang"
+	depends on UNISOC_SCHED && ARM
+	default n
+	help
+	  Enable the l3 cpu hang workaround.
+	  Start a timer when boot, when time out, send ipi_rescheduler to other
+	  cpus to wake up the cpu.
+	  Do not open it except for sharkl3 32b.
 endmenu
