Bug #2402042 arm64: dts: use pd hub and c2c
[root cause  ]: use pd hub and c2c
[changes     ]: use pd hub and c2c
[side effects]: no
[self test   ]:yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: ums9621
[test case]: compile ok
[reviewers   ] chargers
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

use pd hub and c2c.

Change-Id: I2b0d96fac350014d997ced603cc9204a7df04056
Signed-off-by: Rong Wu <rong.wu@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/battery/ums9230-4h10-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/battery/ums9230-4h10-overlay.dtsi
@@ -141,6 +141,7 @@
 	phys = <&hsphy>;
 	pd-extcon-enable;
 	extcon = <&pmic_typec>, <&pmic_pd>;
+	use-typec-extcon;
 };
 
 &i2c5 {
@@ -153,6 +154,7 @@
 		reg = <0x6b>;
 		monitored-battery = <&bat>;
 		irq-gpio = <&ap_gpio 115 GPIO_ACTIVE_LOW>;
+		use-typec-extcon;
 		vddvbus:otg-vbus {
 			regulator-name = "vddvbus";
 		};
@@ -219,6 +221,8 @@
 	sprd,capacity-sleep-calibration;
 
 	sprd,capacity-boot-calibration;
+	use-typec-extcon;
+	extcon = <&pmic_typec>;
 };
 
 &pmic_fchg {
@@ -228,6 +232,8 @@
 
 &pmic_pd {
 	status = "okay";
+	vbus-supply = <&vddvbus>;
+	use-pdhub-c2c;
 	sprd,syscon-aon-apb = <&aon_apb_regs>;
 	usb_con: connector {
 		compatible = "usb-c-connector";
