Bug #2362734 arm64: dts: add temp diff
[root cause  ]: virtul temp opt
[changes     ]: add temp diff
[side effects]: no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: na
[board]: ums9621
[test case]: virtual temp test
[reviewers]: jinfeng.lin

commit_template_version:v1
Signed-off-by: Lisha Xie <Lisha.Xie@unisoc.com>

Change-Id: Ie04f077723f9a85702fe3024b713e375cab61a6c

--- a/arch/arm64/boot/dts/sprd/ums9621-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9621-1h10-overlay.dts
@@ -139,6 +139,8 @@
 				coeff-offset = <4000>;
 				temp-const = <837>;
 				const-offset = <4000>;
+				temp-diff = <350 250 300>;
+				virt-temp-diff = <200>;
 			};
 
 			sprd-uid {
