Bug #2419589 net: in a14, the default compilation in Kconfig of sprd_net is modified to not compile
[root cause  ]:default compilation in Kconfig
[changes     ]:the default in Kconfig is not compiled
[side effects]:na
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:n6p
[test case]:self_test
[reviewers]:wade.shu

commit_template_version:v1

Signed-off-by: Ziyang Wang <ziyang.wang@unisoc.com>
[change_type ] feature_bugfix
[tag_product ] common

Change-Id: I4a302b64ee6171ee813c710ffc5c60ee7dc9b69a

--- a/net/sprd_net/Kconfig
+++ b/net/sprd_net/Kconfig
@@ -5,7 +5,7 @@
 config SPRD_NET_HELPER
 	tristate "Spreadtrum net helper support"
 	depends on NET && IPV6
-	default m
+	default n
 	help
 	  This option adds net helper support to the kernel.
 	  We will get the global ipv6 address.
