Bug #2388949 arm: dts: When phone is used as host, it is still charging
[root cause  ]:vbus notifer is coming first
[changes     ]:useing typec plan,do not respond vbus immediately
[side effects]:none
[self test   ]:pass
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:9832,9863
[test case]:no
[reviewers]:ke.xu

commit_template_version:v1

The PC connects to the phone through the otg interface. If vbus
signal arrives first,the phone will enter the charging state.Then
ID signal comes and phone enters host mode,but can not notfiy the
phy modules to turn off charging.Therefore, using the typec
solution,vbus signal is not immediately responded to.

Change-Id: Ibc3ba30a446232eddf7a5c0e4cf594aa9ff74ad1
Signed-off-by: Xingjie Zheng <xingjie.zheng@unisoc.com>

--- a/arch/arm/boot/dts/sp9863a-base.dts
+++ b/arch/arm/boot/dts/sp9863a-base.dts
@@ -222,7 +222,7 @@
 
 &hsphy {
 	vdd-supply = <&vddusb33>;
-	extcon = <&extcon_gpio>;
+	extcon = <&pmic_typec>;
 	/* first value is device eye-patt setting, the second is host */
 	sprd,hsphy-tunehsamp = /bits/ 8 <0x03 0x03>;
 	sprd,hsphy-tuneeq = /bits/ 8 <0x00 0x00>;
