--- a/arch/arm/boot/dts/sp9832e-1h10_go-overlay.dts
+++ b/arch/arm/boot/dts/sp9832e-1h10_go-overlay.dts
@@ -472,17 +472,18 @@
 };
 
 &pmic_typec {
+	extcon = <&extcon_gpio>;
 	no_support_typec_analog_earphone;
 };
 
 &hsphy{
 	vdd-supply = <&vddusb33>;
-	extcon = <&extcon_gpio>;
+	extcon = <&pmic_typec>;
 	status = "okay";
 };
 
 &usb {
-	extcon = <&extcon_gpio>, <&pmic_typec>;
+	extcon = <&pmic_typec>, <&pmic_typec>;
 	vbus-supply = <&vddvbus>;
 };
 
