--- a/arch/arm/boot/dts/sp9863a-1h10-go_32b-overlay.dts
+++ b/arch/arm/boot/dts/sp9863a-1h10-go_32b-overlay.dts
@@ -522,6 +522,7 @@
 };
 
 &pmic_typec {
+	extcon = <&extcon_gpio>;
 	no_support_typec_analog_earphone;
 };
 
@@ -540,7 +541,7 @@
 };
 
 &usb{
-	extcon = <&extcon_gpio>, <&pmic_typec>;
+	extcon = <&pmic_typec>, <&pmic_typec>;
 	status = "okay";
 	vbus-supply = <&vddvbus>;
 };
