Bug #2388949 arm64: dts: When phone is used as host, it is still charging
[root cause  ]:vbus notifer is coming first
[changes     ]:useing typec plan,do not respond vbus immediately
[side effects]:none
[self test   ]:pass
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:9863,312,512
[test case]:no
[reviewers]:ke.xu

commit_template_version:v1

The PC connects to the phone through the otg interface. If vbus
signal arrives first,the phone will enter the charging state.Then
ID signal comes and phone enters host mode,but can not notfiy the
phy modules to turn off charging.Therefore, using the typec
solution,vbus signal is not immediately responded to.

Change-Id: I3787e80a93585fbcf813a3c68ddcc7ffcace63f5
Signed-off-by: Xingjie Zheng <xingjie.zheng@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/sp9863a-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/sp9863a-1h10-overlay.dts
@@ -241,6 +241,7 @@
 };
 
 &pmic_typec {
+	extcon = <&extcon_gpio>;
 	no_support_typec_analog_earphone;
 };
 
@@ -366,7 +367,7 @@
 };
 
 &usb{
-	extcon = <&extcon_gpio>, <&pmic_typec>;
+	extcon = <&pmic_typec>, <&pmic_typec>;
 	status = "okay";
 	vbus-supply = <&vddvbus>;
 };
