--- a/arch/arm64/boot/dts/sprd/ums312-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums312-2h10-overlay.dts
@@ -349,6 +349,7 @@
 };
 
 &pmic_typec {
+	extcon = <&extcon_gpio>;
 	no_support_typec_analog_earphone;
 };
 
@@ -359,7 +360,7 @@
 
 &hsphy {
 	vdd-supply = <&vddusb33>;
-	extcon = <&extcon_gpio>;
+	extcon = <&pmic_typec>;
 	/* first value is device eye-patt setting, the second is host */
 	sprd,hsphy-tunehsamp = /bits/ 8 <0x03 0x03>;
 	sprd,hsphy-tuneeq = /bits/ 8 <0x00 0x00>;
@@ -367,7 +368,7 @@
 };
 
 &usb {
-	extcon = <&extcon_gpio>, <&pmic_typec>;
+	extcon = <&pmic_typec>, <&pmic_typec>;
 	vbus-supply = <&vddvbus>;
 };
 
