--- a/arch/arm64/boot/dts/sprd/sp9863a-1h10-go-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/sp9863a-1h10-go-overlay.dts
@@ -247,6 +247,7 @@
 };
 
 &pmic_typec {
+	extcon = <&extcon_gpio>;
 	no_support_typec_analog_earphone;
 };
 
@@ -365,7 +366,7 @@
 };
 
 &usb{
-	extcon = <&extcon_gpio>, <&pmic_typec>;
+	extcon = <&pmic_typec>, <&pmic_typec>;
 	status = "okay";
 	vbus-supply = <&vddvbus>;
 };
