[issue][OTG][EKissue-1334]OTG bring up
[rootcause]:unisoc provide patch for otg
[solution]:modify otg code by unisoc patch
[sideeffect]:none
[others]:none

Change-Id: I63033dce56dfde400c788677084789b41facd5c4

--- a/arch/arm64/boot/dts/sprd/sc2730/regulator.dtsi
+++ b/arch/arm64/boot/dts/sprd/sc2730/regulator.dtsi
@@ -7,7 +7,7 @@
  */
 
 &sc2730_pmic {
-	power-controller@1800 {
+	pmic_regulator:power-controller@1800 {
 		compatible = "sprd,sc2731-regulator", "sprd,sc2730-regulator";
 		/* regulator-debugfs-enable; */
 
