--- a/arch/arm64/boot/dts/sprd/battery/lion-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/battery/lion-overlay.dtsi
@@ -210,10 +210,13 @@
 	/*Charge pump target charge current*/
 	cm-cp-taper-current = <1000000>;
 
-	cm-chargers = "charger";
-	//cm-chargers = "sgm41513_charger", "upm6920_charger";
+	//cm-chargers = "charger";
+	cm-chargers = "upm6920_charger";
 	//cm-charge-pumps = "bq2597x-standalone";
 	cm-fuel-gauge = "sc27xx-fgu";
+
+	cm-alt-charger-adapt-enable;
+	cm-alt-charger-power-supplys = "sgm41513_charger";
 
 	/* in deci centigrade */
 	cm-battery-cold = <200>;
@@ -262,6 +265,12 @@
 	use-typec-extcon;
 };
 
+&pmic_regulator {
+	vddvbus:otg-vbus {
+		regulator-name = "vddvbus";
+	};
+};
+
 &i2c5 {
 	#address-cells = <1>;
 	#size-cells = <0>;
@@ -273,7 +282,9 @@
 		reg = <0x6A>;
 		monitored-battery = <&bat &bat2 &bat3>;
 		irq-gpio = <&ap_gpio 115 GPIO_ACTIVE_LOW>;
+		disable-otg-wdg-in-sleep;
 		use-typec-extcon;
+		otg-vbus-node-external;
 	};
 
 	sgm41513_chg: charger@3B {
@@ -281,7 +292,9 @@
                 reg = <0x3B>;
                 monitored-battery = <&bat &bat2 &bat3>;
                 irq-gpio = <&ap_gpio 115 GPIO_ACTIVE_LOW>;
+		disable-otg-wdg-in-sleep;
 		use-typec-extcon;
+		otg-vbus-node-external;
         };
 
 	/*bq2560x_chg: charger@6b {
@@ -320,7 +333,7 @@
 
 &pmic_pd {
 	status = "okay";
-	//vbus-supply = <&vddvbus>;
+	vbus-supply = <&vddvbus>;
 	use-pdhub-c2c;
 	sprd,syscon-aon-apb = <&aon_apb_regs>;
 	usb_con: connector {
