--- a/arch/arm64/boot/dts/sprd/ums9621-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9621-1h10-overlay.dts
@@ -264,6 +264,10 @@
 	cd-gpios = <&eic_sync 35 GPIO_ACTIVE_HIGH>;
 };
 
+&chosen {
+	bootargs_ext = "kvm-arm.mode=none";
+};
+
 &i2c0 {
 	status = "okay";
 	clock-frequency = <400000>;
