--- a/drivers/unisoc_platform/Kconfig
+++ b/drivers/unisoc_platform/Kconfig
@@ -58,6 +58,7 @@ config SPRD_SKYNET
 
 # NOTE: Keep order __alphabetically__ PLEASE!! #
 
+source "drivers/unisoc_platform/binder/Kconfig"
 source "drivers/unisoc_platform/cpufreq/Kconfig"
 source "drivers/unisoc_platform/debug/Kconfig"
 source "drivers/unisoc_platform/debug_log/Kconfig"
