[issue][WiFi][EKissue-2178] Files by Google failed to transfer large files[6/7] [rootcase]:wifi disconnect [solution]:add wifi driver capability [sideeffect]:无
Change-Id: I88d07a6e9f5959aa4ef3eb426758fb882cd3a7b4

--- a/arch/arm64/boot/dts/sprd/ums9230/wcn.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums9230/wcn.dtsi
@@ -61,6 +61,7 @@
 				merlion-chip-en-gpios = <&ap_gpio 118 GPIO_ACTIVE_HIGH>;
 				merlion-rst-gpios = <&ap_gpio 117 GPIO_ACTIVE_HIGH>;
 				xtal-26m-type-sel-gpios = <&ap_gpio 173 GPIO_ACTIVE_HIGH>;
+				wifi-bin-gpios = <&ap_gpio 58 GPIO_ACTIVE_HIGH>;
 //				#address-cells = <1>;
 				nvmem-cells = <&wcn_alpha>;
 				nvmem-cell-names = "wcn_efuse_blk0";
@@ -125,6 +126,7 @@
 				merlion-chip-en-gpios = <&ap_gpio 118 GPIO_ACTIVE_HIGH>;
 				merlion-rst-gpios = <&ap_gpio 117 GPIO_ACTIVE_HIGH>;
 				xtal-26m-type-sel-gpios = <&ap_gpio 173 GPIO_ACTIVE_HIGH>;
+				wifi-bin-gpios = <&ap_gpio 58 GPIO_ACTIVE_HIGH>;
 				#address-cells = <1>;
 				#size-cells = <1>;
 				nvmem-cells = <&wcn_alpha>;
