--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_uob-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_uob-overlay.dts
@@ -602,3 +602,13 @@
 	sprd,sr-width = <720>;
 	sprd,sr-height = <1600>;
 };
+
+&lcd_td4320_truly_mipi_fhd {
+	sprd,sr-width = <720>;
+	sprd,sr-height = <1600>;
+};
+
+&amoled_g2667fp108ff_visionox_mipi_fhd {
+	sprd,sr-width = <720>;
+	sprd,sr-height = <1600>;
+};
