--- a/arch/arm/boot/dts/sharkle.dtsi
+++ b/arch/arm/boot/dts/sharkle.dtsi
@@ -1092,6 +1092,10 @@
 					REG_PMU_APB_PD_GPU_TOP_CFG
 					MASK_PMU_APB_PD_GPU_TOP_FORCE_SHUTDOWN>;
 
+				gpu_top_state = <&pmu_apb_regs
+					REG_PMU_APB_PWR_STATUS3_DBG
+					MASK_PMU_APB_PD_GPU_TOP_STATE>;
+
 				interrupts = <GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>,
 					<GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>,
 					<GIC_SPI 39 IRQ_TYPE_LEVEL_HIGH>;
