--- a/arch/arm64/boot/dts/sprd/sc9863a/dispc.dtsi
+++ b/arch/arm64/boot/dts/sprd/sc9863a/dispc.dtsi
@@ -29,7 +29,7 @@
 		interrupts = <GIC_SPI 46 IRQ_TYPE_LEVEL_HIGH>;
 		status = "disabled";
 		iommus = <&iommu_dispc>;
-		//power-domains = <&disp_pd>;
+		power-domains = <&disp_pd>;
 
 		reset-syscon = <&aon_apb_regs REG_AON_APB_APB_RST1
 				MASK_AON_APB_DISP_SOFT_RST>;
