--- a/arch/arm64/boot/dts/sprd/sc9863a/glbreg.dtsi
+++ b/arch/arm64/boot/dts/sprd/sc9863a/glbreg.dtsi
@@ -29,6 +29,14 @@
 		};
 	};
 
+	disp_pd: power-domain@402b0058 {
+		compatible = "sprd,sharkl3-disp-domain";
+		reg = <0 0x402b0058 0 0x20>;
+		disp-power = <&pmu_apb_regs REG_PMU_APB_PD_DISP_CFG
+			MASK_PMU_APB_PD_DISP_FORCE_SHUTDOWN>;
+		#power-domain-cells = <0>;
+	};
+
 	anlg_phy_g1_regs: syscon@40350000 {
 		compatible = "sprd,sc9863a-glbregs", "syscon",
 				 "simple-mfd";
