Bug #2437780 arm64: dts: add vrr sw function for N6L to support more refresh config
[root cause  ]:vrr sw function support
[changes     ]:lcd dt
[side effects]:none
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:none
[confirm dependent commit]:none
[board]:ums9621
[test case]:display ok
[reviewers]:kevin.tang

commit_template_version:v1
[change_type ] bringup --> sprd_chip_support
[tag_product ] common

add vrr sw function for N6L to support more refresh config.

Change-Id: I9c432a69e2abbb62058ddd95337b4b5d8ec84305
Signed-off-by: Pony Wu <pony.wu@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/lcd/lcd_nt36672c_truly_mipi_fhd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_nt36672c_truly_mipi_fhd.dtsi
@@ -22,6 +22,7 @@
 					sprd,width-mm = <68>;
 					sprd,height-mm = <152>;
 
+					sprd,hw-vrr-en;
 					sprd,vrr-enabled;
 					sprd,vrr-max-layers = <2>;
 
