--- a/arch/arm64/boot/dts/sprd/lcd/lcd_nt36672e_truly_mipi_fhd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_nt36672e_truly_mipi_fhd.dtsi
@@ -36,6 +36,7 @@
 					sprd,width-mm = <68>;
 					sprd,height-mm = <152>;
 
+					sprd,hw-vrr-en;
 					sprd,vrr-enabled;
 
 					sprd,slice-width = <540>;
