Bug #2438771 arm/arm64: dts: modify btwf-ram
[root cause  ]: manual assert does not generate a call statck
[changes     ]: dtsi
[side effects]: no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: yes
[board]: N6P-1
[test case]: manual assert
[reviewers]: yonghan.ye

commit_template_version:v1

Change-Id: I63bd531081e85b508ca8bbb99aff0254ac9f8214
Signed-off-by: Yakun Lin <yakun.lin@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/wcn/chip/wcn-marlin3-sc2355-register.dtsi
+++ b/arch/arm64/boot/dts/sprd/wcn/chip/wcn-marlin3-sc2355-register.dtsi
@@ -48,7 +48,7 @@
 						* According to the parse script,
 						* ram should at offset 0x30 in head.
 						*/
-						sprd,btwf-ram = <0x100000 0xE7400 0x40400000 BSP>;
+						sprd,btwf-ram = <0x100000 0xF0C00 0x40400000 BSP>;
 					};
 
 					gnss-dump {
