Bug #2437510 arm: dts: update audio dts for pcm device id with use_dai_pcm_id
[root cause  ]: need implement this function
[changes     ]: audio iis dts
[side effects]: no
[self test   ]: yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:yes
[board]:s9863a
[test case]:test ok
[reviewers]:kevin.bi

commit_template_version:v1
[change_type ] feature_bugfix
[tag_product ] common

Change-Id: Ib8bdc4956f77e808ac186dd2f18d7bf9990a3e92
Signed-off-by: Zhaodong Fang <zhaodong.fang@unisoc.com>

--- a/arch/arm/boot/dts/sprd-sound.dtsi
+++ b/arch/arm/boot/dts/sprd-sound.dtsi
@@ -177,7 +177,7 @@
 				sound-dai = <&sprd_pcm_iis>;
 			};
 			cpu {
-				sound-dai = <&i2s0>;
+				sound-dai = <&i2s0 0>;
 			};
 			codec {
 				sound-dai = <0 0>;
