--- a/arch/arm64/boot/dts/sprd/sound/sound-sharkl.dtsi
+++ b/arch/arm64/boot/dts/sprd/sound/sound-sharkl.dtsi
@@ -93,6 +93,7 @@
 		sprd-audio-card,codec-replace-adc-rate = <48000>;
 		/* dai-links */
 		sprd-audio-card,dai-link@0 {
+			ignore-suspend = <0>;
 			plat {
 				sound-dai = <&sprd_pcm>;
 			};
@@ -106,6 +107,7 @@
 			};
 		};
 		sprd-audio-card,dai-link@1 {
+			ignore-suspend = <0>;
 			plat {
 				sound-dai = <&sprd_pcm>;
 			};
@@ -119,6 +121,7 @@
 			};
 		};
 		sprd-audio-card,dai-link@2 {
+			ignore-suspend = <0>;
 			plat {
 				sound-dai = <&sprd_pcm>;
 			};
@@ -132,6 +135,7 @@
 			};
 		};
 		sprd-audio-card,dai-link@3 {
+			ignore-suspend = <0>;
 			plat {
 				sound-dai = <&sprd_pcm>;
 			};
@@ -145,6 +149,7 @@
 			};
 		};
 		sprd-audio-card,dai-link@4 {
+			ignore-suspend = <0>;
 			ops = <0>;
 			plat {
 				sound-dai = <&sprd_pcm>;
@@ -159,6 +164,7 @@
 			};
 		};
 		sprd-audio-card,dai-link@5 {
+			ignore-suspend = <0>;
 			plat {
 				sound-dai = <&sprd_pcm>;
 			};
