Bug #2443286 arm: dts: delete sc2731 config for 9863
[root cause  ]:9863 uses sc2721
[changes     ]:modefy led driver bug
[side effects]:no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:9863
[test case]:led driver
[reviewers]:ke.xu

commit_template_version:v1

Change-Id: I605836ac1dde2b9c4301f9964f7639f202d535f2
Signed-off-by: Honghui Sun <honghui.sun@unisoc.com>

--- a/arch/arm/boot/dts/sc2721.dtsi
+++ b/arch/arm/boot/dts/sc2721.dtsi
@@ -23,7 +23,7 @@
 		};
 
 		led-controller@180 {
-			compatible = "sprd,sc2731-bltc", "sprd,sc2721-bltc";
+			compatible = "sprd,sc2721-bltc";
 			#address-cells = <1>;
 			#size-cells = <0>;
 			reg = <0x180>;
