[issue][Sensor][EKissue-4672] Add ant check function on T <1>
[rootcause]: The first report ant button value is 0
[solution]: The ant button is decomposed into 2 keycodes
[sideeffect]:none
[others]:none

Change-Id: Ia17414c2111ddfaf4f9fc66050cf3d8cbb1ed5cb

--- a/arch/arm64/boot/dts/sprd/lion-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/lion-overlay.dts
@@ -130,14 +130,10 @@
 					debounce-interval = <2>;
 					wakeup-source;
 				};
-
-				key-antcheck {
-                                        label = "antcheck";
-                                        linux,code = <KEY_ANT>;
-                                        gpios = <&ap_gpio 122 GPIO_ACTIVE_HIGH>;
-                                        debounce-interval = <2>;
-                                        //wakeup-source;
-                                };
+			};
+			ant_check_div {
+				compatible = "ant_check_div";
+				ant_check_div_gpio = <&ap_gpio 122 GPIO_ACTIVE_HIGH>;
 			};
 			front_sensor: front-sensor {
 				compatible = "sprd,shell-thermal";
