Bug #2447065 arm64: add custom-bus-chn in wcn dts
[root cause  ]: add custom-bus-chn in wcn dts
[changes     ]:arch/arm64/boot/dts/sprd/ums9230/wcn.dtsi
[side effects]:no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:yes
[confirm dependent commit]:no
[board]:ums9230
[test case]:pass
[reviewers]:yonghan.ye

commit_template_version:v1

Change-Id: Iacd7c77ffa6afadeabc248e46c2e9b9b99d607d4
Signed-off-by: Zhilong Chen <zhilong.chen@unisoc.com>
(cherry picked from commit f69adab1014c316efb4ddd6b974c5bdf921a6324)

--- a/arch/arm64/boot/dts/sprd/ums9230/wcn.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums9230/wcn.dtsi
@@ -72,6 +72,13 @@
 					/*sipc region <maped-addr size>*/
 					reg = <0x0 0x87380000 0x0 0x00280000>;
 				};
+				/* Custom Channel Argument For Sipc-Sblock
+				 * index tx-blksize tx-blknum rx-blksize rx-blknum
+				 */
+				wcn-sblk-reset-bus-chn {
+					sprd,wcn-wifi-data0-tx = <18 64 512 896 512>;
+					sprd,wcn-wifi-data0-rx = <19 64 512 896 512>;
+				};
 
 			};
 
