--- a/arch/arm64/boot/dts/sprd/reserved-memory/ums312-2h10-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/reserved-memory/ums312-2h10-overlay.dtsi
@@ -26,4 +26,10 @@
 	fd_reserved: faceid-mem@ffa70000 {
 		reg = <0x0 0xffa70000 0x0 0x00500000>;
 	};
+	/* reserved CMA 320MB for widevine*/
+	widevine_reserved: widevine@d0000000 {
+		compatible = "shared-dma-pool";
+		reg = <0x0 0xd0000000 0x0 0x14000000>;
+		reusable;
+	};
 };
