[issue][USB][EKissue-3443]connect aided machine only charger
[rootcause]:OTG signal is poor
[solution]:modify eye-diagram
[sideeffect]:none
[others]:none

Change-Id: Ie18c897c5964f9072e3c59ed43024063b52e17f5

--- a/arch/arm64/boot/dts/sprd/lion-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/lion-overlay.dts
@@ -316,7 +316,7 @@
 	vdd-supply = <&vddusb33>;
 	extcon = <&pmic_typec>;
 	sprd,hsphy-device-eye-pattern = <0x0683d1c0>;
-	sprd,hsphy-host-eye-pattern = <0x0473d1c0>;
+	sprd,hsphy-host-eye-pattern = <0x04b3d1c0>;
 	status = "okay";
 };
 
