Bug #2454222 arm64: dts: add new scene lcd-high for display
[root cause  ]:add new scene lcd-high for display
[changes     ]:n6pro dts
[side effects]:no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:no
[board]:all
[test case]:test
[reviewers]:test
[change_type ]:feature
[tag_product ]:common

Change-Id: I96b26175b814929f5b3c761a327bf609aa230cf6
Signed-off-by: Jianxiang Bi <jianxiang.bi@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums9620-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-1h10-overlay.dts
@@ -139,9 +139,9 @@
 };
 
 &ddr_dfs {
-		sprd-scene = "boost", "lcdon", "lcdoff", "camlow",
+		sprd-scene = "boost", "lcd-high", "lcdon", "lcdoff", "camlow",
 			"camhigh", "camveryhigh", "faceid", "top", "boot-opt";
-		sprd-freq = <1244 768 384 1536 1536 1866 1244 2133 2133>;
+		sprd-freq = <1244 1244 768 384 1536 1536 1866 1244 2133 2133>;
 };
 
 &dptx {
