Bug #2448474 arm64: dts: delete sharkl5 slack timer
[root cause  ]: slack timer will speed down the otg
[changes     ]: dislable slack timer
[side effects]: no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: yes
[confirm dependent commit]: yes
[board]: ums312
[test case]: poweron
[reviewers]: xuewen.yan,huoming.zhang

modify slack timer for sharkl5

commit_template_version:v1

Change-Id: I36bc584b5871857b1d005e6cf013308857a215f5
Signed-off-by: Qingjun Yu <qingjun.yu@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/ums312/ums312.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums312/ums312.dtsi
@@ -32,7 +32,9 @@
 				core2 {
 					cpu = <&CPU2>;
 				};
-				core3 {
+			};
+			cluster1 {
+				core0 {
 					cpu = <&CPU3>;
 				};
 			};
@@ -47,7 +49,6 @@
 			capacity-dmips-mhz = <544>;
 			dynamic-power-coefficient = <102>;
 			#cooling-cells = <2>;
-			sugov_slack_timer;
 		};
 		CPU1: cpu@100 {
 			device_type = "cpu";
