--- a/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
@@ -30,6 +30,7 @@
 #include "lcd/lcd_nt36672e_truly_mipi_fhd.dtsi"
 #include "lcd/lcd_nt36672c_truly_mipi_fhd.dtsi"
 #include "lcd/lcd_td4320_truly_mipi_fhd.dtsi"
+#include "lcd/lcd_td4375_dijin_4lane_mipi_fhd.dtsi"
 #include "lcd/lcd_dummy_mipi.dtsi"
 #include "reserved-memory/ums9620-2h10-overlay.dtsi"
 #include "touchscreen/ums9620-spi1-gpio13-14-tp.dtsi"
