--- a/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
+++ b/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
@@ -12,10 +12,24 @@
 
 	/* Novatek device tree node */
 	touchpanel@0 {
-		compatible = "focaltech,fts","novatek,NVT-ts-spi","synaptics,tcm-spi";
+		compatible = "omnivision,tcm-spi";
 		reg = <0>; //Same as CS ID
 		status = "ok";
 		spi-max-frequency = <8000000>;	//4800000,9600000,15000000,19200000
+
+		/*------------------omnivision_td4375_spi------------------*/
+		omnivision,irq-gpio = <&ap_gpio 13 GPIO_ACTIVE_HIGH>; /* IRQF_ONESHOT | IRQF_TRIGGER_LOW */
+		omnivision,irq-on-state = <0>;
+		omnivision,reset-gpio = <&ap_gpio 14 GPIO_ACTIVE_HIGH>;
+		omnivision,reset-on-state = <0>;
+		omnivision,reset-active-ms = <20>;
+		omnivision,reset-delay-ms = <200>;
+		omnivision,power-delay-ms = <200>;
+		omnivision,spi-mode = <3>;
+		omnivision,byte-delay-us = <0>;
+		omnivision,block-delay-us = <0>;
+		omnivision,ubl-max-freq = <3000000>;
+		omnivision,ubl-byte-delay-us = <20>;
 
 		/*------------------focaltech_ft8756------------------*/
 		focaltech,max-touch-number = <5>;
