--- a/arch/arm64/boot/dts/sprd/lion-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/lion-overlay.dts
@@ -451,7 +451,7 @@
 };
 
 &panel {
-	//sprd,backlight = <&pwm_backlight>;
+	sprd,backlight = <&pwm_backlight>;
 	avdd-gpio = <&ap_gpio 113 GPIO_ACTIVE_HIGH>;
 	avee-gpio = <&ap_gpio 133 GPIO_ACTIVE_HIGH>;
 	reset-gpio = <&ap_gpio 50 GPIO_ACTIVE_HIGH>;
@@ -460,7 +460,7 @@
 &dpu {
 	sprd,logo-memory = <&logo_reserved>;
 
-	//sprd,backlight = <&pwm_backlight>;
+	sprd,backlight = <&pwm_backlight>;
 };
 /*
 &lcd_g40396_truly_mipi_fhd {
