[M173][EKissue-5875][BSP] Moto EMMC IO KO Modify
[rootcause]: New request for emmc
[solution]: add moto ko
[sideeffect]: None
[other]: None

Change-Id: I674df2b0a36f70a8999b0974b30cfe89669a0a82

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -85,6 +85,8 @@ source "drivers/moto_ko/moto_mm/Kconfig"
 
 source "drivers/moto_ko/moto_swap/Kconfig"
 
+source "drivers/moto_mmap/Kconfig"
+
 source "drivers/hwmon/Kconfig"
 
 source "drivers/thermal/Kconfig"
