MOTOi:charge pump bq2597X,pd fast charge
Change-Id: If542cb9c3b715a5e280191defa1323f9c267d674

--- a/arch/arm64/boot/dts/sprd/battery/ums9620-2h10-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/battery/ums9620-2h10-overlay.dtsi
@@ -24,16 +24,16 @@
 &bat {
 	compatible = "simple-battery";
 	status = "okay";
-	charge-full-design-microamp-hours = <2950000>;
-	charge-term-current-microamp = <60000>;
-	constant-charge-voltage-max-microvolt = <4340000>;
-	factory-internal-resistance-micro-ohms = <252000>;
-	voltage-min-design-microvolt = <3450000>;
+	charge-full-design-microamp-hours = <4850000>;
+	charge-term-current-microamp = <180000>;
+	constant-charge-voltage-max-microvolt = <4450000>;
+	factory-internal-resistance-micro-ohms = <115000>;
+	voltage-min-design-microvolt = <3400000>;
 
 	fast-charge-threshold-microvolt = <4100000>;
-	fullbatt-voltage = <4300000>;
-	fullbatt-current = <120000>;
-	first-fullbatt-current = <150000>;
+	fullbatt-voltage = <4400000>;
+	fullbatt-current = <250000>;
+	first-fullbatt-current = <270000>;
 	fullbatt-track-end-vol = <4295000>;
 	fullbatt-track-end-cur = <130000>;
 	first-calib-voltage = <3580000>;
@@ -63,24 +63,24 @@
 	charge-dcp-current-microamp = <2000000 3000000>;
 	charge-cdp-current-microamp = <1500000 1500000>;
 	charge-unknown-current-microamp = <1000000 1000000>;
-	charge-fchg-current-microamp = <3000000 2000000>;
-	charge-flash-current-microamp = <5000000 2700000>;
+	charge-fchg-current-microamp = <4000000 2000000>;
+	charge-flash-current-microamp = <6000000 3000000>;
 
 	cap-calib-energy-density-ocv-table = <3350000 3800000>, <4150000 4350000>;
 	cap-track-energy-density-ocv-table = <3400000 3722000>;
 
 	dcp-jeita-temp-table = <1000 1030 0 4340000>, <1150 1180 700000 4340000>,
-		<1450 1420 2000000 4340000>, <1600 1570 700000 4100000>;
+		<1450 1420 2000000 4450000>, <1600 1570 1000000 4100000>;
 	sdp-jeita-temp-table = <1000 1030 0 4340000>, <1150 1180 500000 4340000>,
-		<1450 1420 500000 4340000>, <1600 1570 500000 4100000>;
+		<1450 1420 500000 4450000>, <1600 1570 500000 4100000>;
 	cdp-jeita-temp-table = <1000 1030 0 4340000>, <1150 1180 700000 4340000>,
-		<1450 1420 1500000 4340000>, <1600 1570 700000 4100000>;
+		<1450 1420 1500000 4450000>, <1600 1570 1000000 4100000>;
 	unknown-jeita-temp-table = <1000 1030 0 4340000>, <1150 1180 700000 4340000>,
-		<1450 1420 1000000 4340000>, <1600 1570 700000 4100000>;
+		<1450 1420 1000000 4450000>, <1600 1570 700000 4100000>;
 	fchg-jeita-temp-table = <1000 1030 0 4340000>, <1150 1180 700000 4340000>,
-		<1450 1420 3250000 4340000>, <1600 1570 700000 4100000>;
+		<1450 1420 4000000 4450000>, <1600 1570 1000000 4100000>;
 	flash-jeita-temp-table = <1000 1030 0 4340000>, <1150 1180 1000000 4340000>,
-		<1450 1420 5000000 4340000>, <1600 1570 1000000 4100000>;
+		<1450 1420 6000000 4450000>, <1600 1570 1000000 4100000>;
 };
 
 &cm {
@@ -129,7 +129,7 @@
 	/* when the safe charging voltage is exceeded, stop charging */
 	cm-charge-voltage-max = <6500000>;
 	cm-fast-charge-voltage-max = <10500000>;
-	cm-flash-charge-voltage-max = <12000000>;
+	cm-flash-charge-voltage-max = <12500000>;
 	/* drop voltage in microVolts to restart charging */
 	cm-charge-voltage-drop = <700000>;
 	cm-fast-charge-voltage-drop = <700000>;
@@ -165,7 +165,12 @@
 			regulator-name = "vddvbus";
 		};
 	};
+};
 
+&i2c3 {
+	status = "okay";
+	clock-frequency = <400000>;
+	
 	bq2597x_chg: charger@65 {
 		compatible = "ti,bq2597x-standalone";
 		reg = <0x65>;
@@ -174,18 +179,22 @@
 		ti,bq2597x,bus-therm-disable = <1>;
 		ti,bq2597x,regulation-disable = <1>;
 
-		ti,bq2597x,bat-ovp-threshold = <4400>;
-		ti,bq2597x,bat-ovp-alarm-threshold = <4340>;
-		ti,bq2597x,bat-ocp-threshold = <5500>;
-		ti,bq2597x,bat-ocp-alarm-threshold = <5000>;
+		ti,bq2597x,bat-ovp-threshold = <4700>;
+		ti,bq2597x,bat-ovp-alarm-threshold = <4670>;
+		ti,bq2597x,bat-ocp-threshold = <6300>;
+		ti,bq2597x,bat-ocp-alarm-threshold = <5900>;
+
 		ti,bq2597x,bus-ovp-threshold = <11500>;
 		ti,bq2597x,bus-ovp-alarm-threshold = <10500>;
-		ti,bq2597x,bus-ocp-threshold = <3000>;
-		ti,bq2597x,bus-ocp-alarm-threshold = <2700>;
+		ti,bq2597x,bus-ocp-threshold = <3250>;
+		ti,bq2597x,bus-ocp-alarm-threshold = <3100>;
+
 		ti,bq2597x,bat-ucp-alarm-threshold = <1000>;
+
 		ti,bq2597x,bat-therm-threshold = <0x15>;
 		ti,bq2597x,bus-therm-threshold = <0x15>;
 		ti,bq2597x,die-therm-threshold = <0xc8>;
+
 		ti,bq2597x,ac-ovp-threshold = <13>;
 		ti,bq2597x,sense-resistor-mohm = <5>;
 		ti,bq2597x,adc-sample-bits = <13>;
