MOTO: bsp: bringup hwinfo -- kernel
Change-Id: Ia572d267571bad0085da240e126eb6a85cb27914

--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -240,4 +240,7 @@ source "drivers/most/Kconfig"
 source "drivers/unisoc_platform/Kconfig"
 
 source "drivers/trusty/Kconfig"
+
+source "drivers/ontim/Kconfig"
+
 endmenu
