--- a/arch/arm64/boot/dts/sprd/lcd/lcd_icnl9916c_tm_mipi_hd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_icnl9916c_tm_mipi_hd.dtsi
@@ -18,15 +18,15 @@
 					sprd,dsi-lane-number = <4>;
 					sprd,dsi-color-format = "rgb888";
 
-					sprd,phy-bit-clock = <921600>;	/* kbps */
+					sprd,phy-bit-clock = <1105000>;	/* kbps */
 					sprd,phy-escape-clock = <20000>;/* kHz */
 					sprd,vrr-enable;  /*90hz 60hz*/
 					// sprd,power-gpio-delay = <20>; ms
 					sprd,width-mm = <68>;
 					sprd,height-mm = <152>;
-					sprd,dpi-clk-div = <6>;
-					sprd,video-lp-cmd-enable = <1>;
-					sprd,hporch-lp-disable = <1>;
+					//sprd,dpi-clk-div = <6>;
+					//sprd,video-lp-cmd-enable = <1>;
+					//sprd,hporch-lp-disable = <1>;
 
 					sprd,esd-check-enable = <1>;
 					sprd,esd-check-mode = <1>;
@@ -40,9 +40,9 @@
 					sprd,initial-command = [
 						39 00 00 04 F0 99 16 0C
 						39 00 00 05 BD A1 0A 52 A6
-						39 00 00 15 C1 10 20 20 2C 04 4C 4C 04 4C 06 22 40 35 30 07 11 84 4C 00 93
+						//39 00 00 15 C1 10 20 20 2C 04 4C 4C 04 4C 06 22 40 35 30 07 11 84 4C 00 93
 						39 00 00 03 C2 11 05
-						39 00 00 05 C8 44 00 0C 96
+						//39 00 00 05 C8 44 00 0C 94
 						39 00 00 03 51 00 00
 						15 00 00 02 53 2C
 						15 02 00 02 55 01
