Bug #2468994 arm64: dts: add dts for 9621_1h10_uob SKIP ME ALWAYS
[root cause  ]:9621_1h10_uob bringup
[changes     ]:add dts for 9621_1h10_uob
[side effects]:none
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:no
[is there dependence]:no
[confirm dependent commit]:no
[board]:all
[test case]:self-test
[reviewers]:yan.cao

commit_template_version:v1

Change-Id: Idc0c6056b4445897323029921edfdaa9038a6f89
Signed-off-by: Yifan Li1 <yifan.li1@unisoc.com>

--- a/arch/arm64/boot/dts/sprd/Makefile
+++ b/arch/arm64/boot/dts/sprd/Makefile
@@ -72,6 +72,7 @@ dtb-$(CONFIG_ARCH_SPRD) += \
 	ums9610-haps-overlay.dtbo \
 	ums9610-zebu-flash-overlay.dtbo \
 	ums9621-1h10-overlay.dtbo \
+	ums9621-1h10_uob-overlay.dtbo \
 	ums9610-zebu-overlay.dtbo
 
 ums9610-haps-overlay.dtbo-base := ums9610-base.dtb
