MOTO: sensor: rfcable detect  -- dtsi
Change-Id: I42e7db469f26f15837050cc7bdfe1697d33326c7

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
@@ -631,3 +631,17 @@
 	sprd,sr-width = <720>;
 	sprd,sr-height = <1600>;
 };
+
+&soc {
+        usb_cable: usb_cable {
+                compatible = "sprd,usb_cable_eint";
+                interrupt-parent = <&ap_gpio>;
+                interrupts = <168 IRQ_TYPE_LEVEL_LOW>,
+                                <169 IRQ_TYPE_LEVEL_LOW>;
+                usbcable-gpio = <168>;
+                usbcable-gpio1 = <169>;
+                debounce = <256000>;
+                status = "okay";
+        };
+};
+
