MOTO: bsp: add BUILD_SMT -- kernel
Change-Id: Icc334e218d5374d6d016fcb278bcf2aad79fa994

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -6,6 +6,10 @@
 # Rewritten to use lists instead of if-statements.
 #
 
+ifeq ($(BUILD_SMT),YES)
+subdir-ccflags-y += -DSMT_VERSION
+endif
+
 obj-y				+= irqchip/
 obj-y				+= bus/
 
